...
/// A button to save/update the model to the data store.
fileprivate struct SaveButtonView: View {
    @Binding private(set) var canSave: Bool
    var onPressed: () -> Void
    var body: some View {
        Button(action: onPressed) {
            Text("Save")
                .frame(height: 50)
                .frame(maxWidth: .infinity)
                .foregroundColor(.white)
                .background(canSave ? Color.green : Color.gray)
        }
        .disabled(!canSave)
...
